[package]
name = "easydrm"
version = "0.1.0"
edition = "2024"
description = "GLFW-inspired abstraction over DRM/KMS, GBM, and EGL/OpenGL that lets you build fullscreen Linux applications without a compositor (no X11, no Wayland)."
license = "MIT"
repository = "https://github.com/hyprside/easydrm"

[dependencies]
drm = "0.14.1"
drm-sys = "0.8.0"
gbm = { version = "0.18.0", default-features = false, features = ["drm", "drm-support", "import-egl"] }
glutin = { version = "0.32.3", default-features = false, features = ["egl"] }
libc = "0.2.177"
nix = { version = "0.30.1", features = ["poll", "socket"] }
raw-window-handle = "0.6.2"
thiserror = "2.0.17"

[dev-dependencies]
rand = "0.9.2"

[build-dependencies]
gl_generator = "0.14.0"
